--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,37 +1,27 @@
 name: Playwright Tests
-
 on:
   push:
-    branches: [ master ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ master ]
-
+    branches: [ main, master ]
 jobs:
   test:
-    timeout-minutes: 30
+    timeout-minutes: 60
     runs-on: ubuntu-latest
-
     steps:
-      - name: ⬇️ Checkout code
-        uses: actions/checkout@v3
-
-      - name: 🛠 Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18' # Or your preferred Node version
-
-      - name: 📦 Install dependencies
-        run: npm ci
-
-      - name: 📥 Install Playwright Browsers
-        run: npx playwright install --with-deps
-
-      - name: 🧪 Run Playwright tests
-        run: npx playwright test
-
-      - name: 📤 Upload Playwright HTML report
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: playwright-report
-          path: playwright-report
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: lts/*
+    - name: Install dependencies
+      run: npm ci
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
+    - name: Run Playwright tests
+      run: npx playwright test
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
