--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,8 +18,7 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: |
-        npx playwright test
+      run: npx playwright test  # This is correctly run in its own step
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
